# prog-algo-s2

./: .gitignore
tp1/src/: fraction.cpp  fraction.hpp  main.cpp
tp2/: CMakeLists.txt
tp2/src/: main.cpp
tp3/: CMakeLists.txt
tp3/src/: exo1.cpp  exo2.cpp
tp4/: CMakeLists.txt
tp4/src/: exo1.cpp  exo2.cpp  exo3.cpp
tp5/: CMakeLists.txt
tp5/src/: exo1.cpp  exo2.cpp  exo3.cpp
tp6/: CMakeLists.txt
tp6/src/: main.cpp  node.cpp  node.hpp
